unpackaged/main/default/objects/PersonalCircumstance__c/PersonalCircumstance__c.object-meta.xml
<CustomObject>
    <label>Personal Circumstance</label>
    <nameField>
        <displayFormat>PC# {00000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Circumstances</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>