unpackaged/main/default/objects/PersonalCircumstance__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Indicates when the Personal Circumstance ends as it may occur in the past or future. Can also be left blank for ongoing circumstances.</description>
    <inlineHelpText>Use this field to store when the Personal Circumstance ends as it may be in the past or future. Leave it blank where the circumstance is ongoing.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>