unpackaged/main/default/objects/PersonalCircumstance__c/fields/MethodOfContact__c.field-meta.xml
<CustomField>
    <fullName>MethodOfContact__c</fullName>
    <description>This field provides all methods that the customer can initially log their personal circumstance</description>
    <inlineHelpText>How did the customer first inform us of their personal circumstance</inlineHelpText>
    <label>Method of Contact</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Webform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>