unpackaged/main/default/objects/PersonalCircumstance__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <description>Used to store where the personal circumstance was raised by the customer, e.g. claims/quote/pas/etc</description>
    <inlineHelpText>Use this to store where the customer first tell us about their circumstance e.g. Claims System</inlineHelpText>
    <label>Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>