unpackaged/main/default/objects/PersonalCircumstance__c/fields/SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemId__c</fullName>
    <description>Used to store the ID/reference from the source system allowing us to link the personal circumstance to the initial interaction with the customer</description>
    <inlineHelpText>Store the the Id/reference of the interaction in the source system</inlineHelpText>
    <label>Source System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>