unpackaged/main/default/objects/PersonalCircumstance__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Indicates when the Personal Circumstance begins as it may occur in the past or future</description>
    <inlineHelpText>Use this field to store when the Personal Circumstance begins/began as it may be in the past or future</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>