unpackaged/main/default/objects/PersonalCircumstance__c/fields/Support_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Support_Sub_Category__c</fullName>
    <description>This sub-category field will provide ability to log more granular details linked to Support Category field</description>
    <label>Support Sub-Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SupportCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankrupt/IVA</fullName>
            </value>
            <value>
                <fullName>Debt/Low Income</fullName>
            </value>
            <value>
                <fullName>Emotional Distress</fullName>
            </value>
            <value>
                <fullName>Ability to Understand</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Computer Illiterate/Technology</fullName>
            </value>
            <value>
                <fullName>Lack of Insurance Knowledge/Experience</fullName>
            </value>
            <value>
                <fullName>Family Bereavement</fullName>
            </value>
            <value>
                <fullName>Family Illness</fullName>
            </value>
            <value>
                <fullName>Divorce/Separation</fullName>
            </value>
            <value>
                <fullName>Caring Responsibilities</fullName>
            </value>
            <value>
                <fullName>Major Incident</fullName>
            </value>
            <value>
                <fullName>Jobless/Redundancy</fullName>
            </value>
            <value>
                <fullName>Domestic Matters</fullName>
            </value>
            <value>
                <fullName>Physical Health</fullName>
            </value>
            <value>
                <fullName>Addiction</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Terminal Illness</fullName>
            </value>
            <value>
                <fullName>Surgery/Treatment/Hospital</fullName>
            </value>
            <value>
                <fullName>Blindness</fullName>
            </value>
            <value>
                <fullName>Deafness</fullName>
            </value>
            <value>
                <fullName>Mental Capacity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>