unpackaged/main/default/objects/PersonalCircumstance__c/fields/SupportCategory__c.field-meta.xml
<CustomField>
    <fullName>SupportCategory__c</fullName>
    <description>This field indicates the type of personal circumstance as outlined by the FCA</description>
    <label>Support Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessibility</fullName>
                <label>Capability</label>
            </value>
            <value>
                <fullName>Financial</fullName>
                <label>Resilience</label>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Life Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>