unpackaged/main/default/objects/PersonalCircumstance__c/validationRules/Ensure_details_field_is_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_details_field_is_populated</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(Details__c),ISNULL(Details__c))</errorConditionFormula>
    <errorMessage>Please include details of the customer&#39;s personal circumstance</errorMessage>
</ValidationRule>