unpackaged/main/default/objects/PersonalCircumstance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>SupportCategory__c</columns>
    <columns>Support_Sub_Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>